@@ -440,3 +440,6 @@
 
 	* Textblock: Added support for quoting format parameters.
 	  Formats like: <font='Sans' color='#FFF'> are now legal.
+	* Textblock: Added font_weight and font_style formats.
+	  These format allow overriding the font style set using:
+	  font=':style=Bold'.
